# gwz-dev

./: .gitignore  AGENTS.md  AGENTS_GWZ.md  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  bazel-gwz-dev
dev-docs/: AnnounceGwz.md  AnnounceGwzHn.md  GwzDevCodeM2a-Rem2ReviewPrompt.md  GwzDevCodeM2a-Rem3CorrectionReviewPrompt.md  GwzDevCodeM2a-Rem3FinalReviewPrompt.md  GwzDevCodeM2a-Rem3ReviewPrompt.md  GwzDevCodeM2a-RemPlan-2.md  GwzDevCodeM2a-RemPlan-3.md  GwzDevCodeM2a-RemPlan.md  GwzDevCodeM2a-Review56-2.md  GwzDevCodeM2a-Review56-3.md  GwzDevCodeM2a-Review56-4.md  GwzDevCodeM2a-Review56-6.md  GwzDevCodeM2a-Review56.md  GwzDevCodeM2a-ReviewF5-2.md  GwzDevCodeM2a-ReviewF5-3.md  GwzDevCodeM2a-ReviewF5-4.md  GwzDevCodeM2a-ReviewF5-5.md  GwzDevCodeM2a-ReviewF5-6.md  GwzDevCodeM2a-ReviewF5.md  GwzDevCodeM2aReviewPriompt.md  GwzDiffD0Protocol.md  GwzDiffD4RenderSpike.md  GwzDiffPlan-Review48-2.md  GwzDiffPlan-Review48-3.md  GwzDiffPlan-Review55.md  GwzDiffPlan.md  GwzDocPlan-D0a.md  GwzDocPlan-Review35.md  GwzDocPlan.md  GwzMergeCode-ReviewF5-2.md  GwzMergeCode-ReviewF5.md  GwzMergeCodeRemPlan-1.md  GwzPyCliParityIssues.md  GwzStashBranch-Review55.md  GwzStashBranchPlan.md  GwzTargetSelectionPlan.md  HN-AnnounceGWZ.md  HomeReadmesPlan.md  RepoClonePlan-Review56s.md  (+3 more)
dev-docs/history/: GwzDiffPlan-Review48-4.md  GwzDiffPlan-Review48.md  GwzDiffPlan-Review55-2.md  GwzDiffPlan-Review55-5.md  GwzDocPlan-D0a.md  GwzDocPlan.md  GwzStashBranch-Review48-2.md  GwzStashBranch-Review48.md  GwzStashBranchPlan.md  GwzTargetSelectionPlan-Review55.md
gwz.conf/: gwz.lock.yml  gwz.yml
gwz.conf/markers/: 019f32d4-2633-7a21-9213-89f38938622e.yaml  019f3b58-ae32-765c-9fc4-c5a457b05e75.yaml  019f3c69-0ea0-71e3-a56c-ce25ee8e43f7.yaml  019f4a06-f224-7e50-a371-8980986528f8.yaml  019f4a5d-deda-756d-93b6-04455290dc91.yaml  019f4a80-8bb0-71cd-8257-b535c7aaff91.yaml  019f4ac6-3817-7dbb-9b6b-bcbf36bbf7d0.yaml  019f4ac7-44e5-766c-8745-b58308c82f91.yaml  019f4b60-7589-7d13-b93c-069ba8421e3b.yaml  019f4c9a-3f8c-784f-9f9c-952855c13ee0.yaml  019f4e19-84a8-7eb2-9fd8-ca051215aa97.yaml  019f5580-94f5-72af-9cef-005180d8f67f.yaml  019f5580-9580-71c9-ad78-f57347e22129.yaml  019f5582-fd52-711b-8e92-bec9df940f41.yaml  019f5595-2435-77f4-8586-f521abff263c.yaml  019f5596-98cd-7826-ae46-a4d85047031b.yaml  019f6fef-62ed-7980-9108-5fb509b891b6.yaml  019f703f-f7bd-7f12-a685-20593a4a3875.yaml  019f736b-9129-7da5-9af8-fc65eafcf3cd.yaml  019f737b-a84a-7ea4-b5df-177acfaa3e08.yaml  019f7649-ddd7-78f2-b908-29a825e4717e.yaml  019f7659-8395-72cb-ae66-8b134168cf90.yaml  019f7669-fab1-78b1-8a33-28a01240da2b.yaml  019f7684-3098-7e10-aa1b-df335d3aa823.yaml  019f76b7-9106-740f-ab34-2bfac734ff6f.yaml  019f79db-a310-78ef-9d91-f9623cc560f2.yaml  019f8985-f998-7ef7-9927-22e1026a5c02.yaml  019f899e-5a82-7e2d-8a72-14dde81969ef.yaml  019f8ec2-3e7d-72a6-94d0-5f2a05fb7d4b.yaml  019f8fb6-b811-7984-a8bc-57b20c0e9167.yaml
gwz.conf/snapshots/: A.yaml  phase3-start-py-build.yaml  start-py-build.yaml  target-selection-start.yaml
trial/rs/src/: generated.rs
